--- a/src/pages/Admin/Styles.css
+++ b/src/pages/Admin/Styles.css
@@ -1,12 +1,12 @@
 .form-container{
-  background-color: #e8eaef;
-  border-radius: 10px;
-  padding-left: 30px;
-  padding-right: 30px;
-  padding-top: 30px;
-  padding-bottom: 30px;
-  margin-right: 30px;
-  width: 900px;
+  background-color: #f4f4f4;
+  border-radius: 8px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
+  padding-bottom: 12px;
+  width: 560px;
+  margin-bottom: 13px;
 }
 
 .cancelbtn {
