--- a/src/components/Common/SideBar.css
+++ b/src/components/Common/SideBar.css
@@ -1,10 +1,11 @@
 .sidebar {
-  width: 290px;
+  width: 280px;
   height: 100vh;
   background-color: #ffffff;
   color: rgb(52, 53, 53);
-  padding: 10px;
+  padding: 12px;
   font-weight: 400;
+  align-items: left;
 }
 
 .sidebar ul {
