--- a/src/pages/Admin/Order/OrderStyles.css
+++ b/src/pages/Admin/Order/OrderStyles.css
@@ -1,12 +1,16 @@
-.form-container{
+.form-container {
   background-color: #f4f4f4;
   border-radius: 8px;
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 20px;
   padding-bottom: 12px;
-  width: 560px;
-  margin-bottom: 13px;
+  width: 585px;
+  margin-bottom: 18px;
+}
+
+.form-container-double {
+  margin-left: 80px;
 }
 
 .print-hide {
@@ -79,7 +83,7 @@
   padding-right: 20px;
   padding-top: 20px;
   padding-bottom: 12px;
-  width: 1180px;
+  width: 1190px;
   margin-bottom: 13px;
 }
 
@@ -441,17 +445,17 @@ tfoot .create-order-button {
 
 .table th.orderid-column,
 .table td.orderid-column {
-  width: 9%;
+  width: 10%;
 }
 
 .table th.customer-column,
 .table td.customer-column {
-  width: 20%;
+  width: 22%;
 }
 
 .table th.date-column,
 .table td.date-column {
-  width: 15%;
+  width: 13%;
 }
 
 /* Set widths for each column */
@@ -471,7 +475,7 @@ tfoot .create-order-button {
 
 .table th.order-status-column,
 .table td.order-status-column {
-  width: 15%;
+  width: 13%;
   /* Width for Order Status column */
   text-align: center;
 }
@@ -529,13 +533,19 @@ tfoot .create-order-button {
 }
 
 .action-btn.view-btn {
+  margin-top: -30px;
   margin-left: 10px;
   font-size: 20px;
 }
 
+.action-btn.edit-btn {
+  margin-top: -30px;
+}
+
 .action-btn.delete-btn {
+  margin-top: -30px;
   background: none;
-  margin-left: -10px;
+  margin-left: -12px;
 }
 
 .action-btn:hover {
@@ -566,7 +576,7 @@ tfoot .create-order-button {
   margin-bottom: 8px;
 }
 
-.billing-detail span{
+.billing-detail span {
   text-align: right;
   margin-left: 120px;
 }
@@ -594,12 +604,12 @@ tfoot .create-order-button {
   /* Adjust padding for consistency */
   width: 100%;
   /* Set to 100% for responsive design */
-  min-width: 740px;
+  min-width: 735px;
 }
 
 .order-items-table-new {
   margin-left: 215px;
-  min-width: 700px;
+  min-width: 690px;
   border-collapse: separate;
   border-spacing: 8px 8px;
   background-color: #fff;
