--- a/src/components/Common/Dashboard.css
+++ b/src/components/Common/Dashboard.css
@@ -1,8 +1,10 @@
 .content {
-  margin-left: 300px;
-  margin-top: -700px;
+  margin-left: 290px;
+  margin-top: -730px;
 }
 
 .searchbar{
-  margin-left: -820px;
+  margin-top: 53px;
+  margin-left: -790px;
+  margin-bottom: -18px;
 }
