--- a/src/pages/Admin/Order/OrderStyles.css
+++ b/src/pages/Admin/Order/OrderStyles.css
@@ -10,7 +10,7 @@
 }
 
 .form-container-double {
-  margin-left: 80px;
+  margin-left: 92px;
 }
 
 .print-hide {
@@ -369,6 +369,7 @@ tfoot .create-order-button {
   align-items: center;
   padding-bottom: 20px;
   padding-right: 20px;
+  margin-bottom: -3px;
 }
 
 .order-search {
@@ -433,7 +434,7 @@ tfoot .create-order-button {
 }
 
 .table th {
-  background-color: #e7e7e7;
+  background-color: #d9d9d9;
 }
 
 .table th,
@@ -545,7 +546,7 @@ tfoot .create-order-button {
 .action-btn.delete-btn {
   margin-top: -30px;
   background: none;
-  margin-left: -12px;
+  margin-left: 4px;
 }
 
 .action-btn:hover {
@@ -560,7 +561,7 @@ tfoot .create-order-button {
   padding-top: 20px;
   padding-bottom: 12px;
   width: 460px;
-  margin-bottom: 13px;
+  margin-bottom: 10px;
 }
 
 .order-details,
@@ -750,6 +751,7 @@ tfoot .create-order-button {
   border: none;
   cursor: pointer;
   border-radius: 5px;
+  margin-right: -15px;
 }
 
 .add-update-order-btn:hover {
