--- a/src/pages/Admin/Order/OrderStyles.css
+++ b/src/pages/Admin/Order/OrderStyles.css
@@ -76,6 +76,25 @@
   /* Text color on selected */
 }
 
+.badge {
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.in-stock {
+  background-color: #d4edda;
+  color: #155724;
+  border: 1px solid #c3e6cb;
+}
+
+.low-stock {
+  background-color: #f8d7da;
+  color: #721c24;
+  border: 1px solid #f5c6cb;
+}
+
 .product-summary {
   background-color: #f4f4f4;
   border-radius: 8px;
@@ -99,7 +118,7 @@
 .search-input-wrapper {
   position: relative;
   width: 100%;
-  max-width: 400px;
+  max-width: 744px;
 }
 
 /* Search icon styles */
@@ -133,7 +152,7 @@
 }
 
 /* Search button styles */
-.search-button {
+.add-button {
   padding: 10px 20px;
   margin-left: 10px;
   border: none;
@@ -146,7 +165,7 @@
 }
 
 /* Hover state for the button */
-.search-button:hover {
+.add-button:hover {
   background-color: rgb(84, 81, 81);
 }
 
@@ -186,9 +205,11 @@
 .order-items-table th.quantity-column,
 .order-items-table th.price-column,
 .order-items-table th.remove-column,
+.order-items-table th.product-id-column,
 .order-items-table td.quantity-column,
 .order-items-table td.price-column,
-.order-items-table td.remove-column {
+.order-items-table td.remove-column, 
+.order-items-table td.product-id-column {
   text-align: center;
   /* Center the headings and the corresponding fields */
 }
@@ -233,7 +254,8 @@
 /* Centering the quantity buttons and price */
 .quantity-column,
 .price-column,
-.remove-column {
+.remove-column, 
+.product-id-column {
   text-align: center;
   /* Ensure fields in these columns are centered */
 }
@@ -285,9 +307,34 @@
   color: #434343;
 }
 
+.product-id-column {
+  width: 8%;
+}
+
+/* Center the quantity, price, and remove fields */
+.order-items-table th.stock-column,
+.order-items-table th.add-column,
+.order-items-table td.stock-column,
+.order-items-table td.add-column {
+  text-align: center;
+  /* Center the headings and the corresponding fields */
+}
+
 /* Adjust widths for each column */
 .product-name-column {
-  width: 40%;
+  width: 30%;
+}
+
+.category-column {
+  width: 12%;
+}
+
+.stock-column {
+  width: 10%;
+}
+
+.add-column {
+  width: 2%;
 }
 
 .quantity-column {
@@ -803,4 +850,34 @@ tfoot .create-order-button {
   margin-top: -20px;
   margin-left: 5px;
   font-size: 28px;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 25px;
+  list-style: none;
+  margin-bottom: 40px;
+}
+
+.pagination li {
+  margin: 0 5px;
+}
+
+.pagination li a {
+  padding: 8px 12px;
+  border: 1px solid #ddd;
+  color: rgb(84, 81, 81);
+  text-decoration: none;
+  border-radius: 4px;
+  background-color: #ddd;
+}
+
+.pagination li.active a {
+  background-color: rgb(84, 81, 81);
+  color: white;
+}
+
+.pagination li a:hover {
+  background-color: #ddd;
 }
